(chore): Removed MaxPermSize as this had no effect since Java8
See https://docs.oracle.com/javase/9/migrate/#GUID-1F270BDA-50B0-49C8-807E-0B727CCC5169